--- a/Studienarbeit/Dokument/content/02-ersteExperimente.tex
+++ b/Studienarbeit/Dokument/content/02-ersteExperimente.tex
@@ -5,4 +5,4 @@ In diesem Abschnitt werden erste Experimente mit dem EV3 vorgestellt. Dazu zähl
 -Roboter mit Lego-Mindstorms IDE Programmieren \\
 -Festlegung der Grenzen dieses Senors\\
 -Ziel: Roboter fährt nach vorgegebenem Bewegungsmuster in einer ihm unbekannten Umgebung und weicht, mit Hilfe des Ultraschallsensors, Hindernissen aus. Dies erfolgt nach vorgegebenem Muster.\\ 
--Beobachtungen: Hindernisse müssen einen gewisse Breite haben, Inhalt der schleife nicht zu groß sonst Probleme mit dem Ergebnis des Sensors, Unterschiedlich große Kurven auf diversen Oberflächen (Teppich, Fliesen, PVC, Parkett)  \\
+-Beobachtungen: Hindernisse müssen einen gewisse Breite haben, Inhalt der schleife nicht zu groß sonst Probleme mit dem Ergebnis des Sensors, Unterschiedlich große Kurven auf diversen Oberflächen (Teppich, Fliesen, PVC, Parkett), Eingeschränkte Übersichtlichkeit bei komplexen Programmen, \\
