--- a/Studienarbeit/Dokument/content/02-ersteExperimente.tex
+++ b/Studienarbeit/Dokument/content/02-ersteExperimente.tex
@@ -1,8 +1,11 @@
 \chapter{Erste Experimente mit dem EV3}
 In diesem Abschnitt werden erste Experimente mit dem EV3 vorgestellt. Dazu zählen das kennenlernen der Sensoren so wie deren Zusammenspiel. 
 \section{Aufbau und Test des Ultraschallsensors}
+\paragraph{Aufbau und Programmierung des Roboters}
 -Aufbau nach Anleitung\\
 -Roboter mit Lego-Mindstorms IDE Programmieren \\
 -Festlegung der Grenzen dieses Senors\\
+\paragraph{Ziel}
 -Ziel: Roboter fährt nach vorgegebenem Bewegungsmuster in einer ihm unbekannten Umgebung und weicht, mit Hilfe des Ultraschallsensors, Hindernissen aus. Dies erfolgt nach vorgegebenem Muster.\\ 
+\paragraph{Beobachtungen}
 -Beobachtungen: Hindernisse müssen einen gewisse Breite haben, Inhalt der schleife nicht zu groß sonst Probleme mit dem Ergebnis des Sensors, Unterschiedlich große Kurven auf diversen Oberflächen (Teppich, Fliesen, PVC, Parkett), Eingeschränkte Übersichtlichkeit bei komplexen Programmen, \\
