--- a/Studienarbeit/Dokument/content/02-ersteExperimente.tex
+++ b/Studienarbeit/Dokument/content/02-ersteExperimente.tex
@@ -2,13 +2,20 @@
 In diesem Abschnitt werden erste Experimente mit dem EV3 vorgestellt. Dazu zählen das kennenlernen der Sensoren so wie deren Zusammenspiel. 
 \section{Aufbau und Test des Ultraschallsensors}
 \paragraph{Aufbau und Programmierung des Roboters}
+Der Roboter wurde mit Hilfe der beiligenden Anleitung zusammengebaut. Er besitzt zwei Motoren, die jeweils eines der Räder antreiben. Damit das Heck nicht auf dem Untergrund aufsetzt, wurde eine freilaufende Kugel installiert. 
+Als Sensor wurde bei diesem Aufbau der Ultraschallsensor verwendet. Er dient zu Hinderniserkennung und hat einen Arbeitsbereich von 3-255cm. \\
+ 
 -Aufbau nach Anleitung\\
 -Roboter mit Lego-Mindstorms IDE Programmieren \\
 -Festlegung der Grenzen dieses Senors\\
 \paragraph{Ziel}
--Ziel: Roboter fährt nach vorgegebenem Bewegungsmuster in einer ihm unbekannten Umgebung und weicht, mit Hilfe des Ultraschallsensors, Hindernissen aus. Dies erfolgt nach vorgegebenem Muster.
+Der Roboter soll nach dem einprogrammierten Muster in einer ihm unbekannten Umgebung selbstständig Hindernissen ausweichen. Der Ultraschallsensor soll die Hindernisse erkennen. Dieser Versuch soll helfen, die Grenzen des Sensors kennenzulernen. Des weiteren dient dieser Versuchsaufbau dazu weitere Eigenheiten des Roboters kennenzulernen. Auch soll der Aufbau als Grundgerüst für weitere Sensoren und Versuche dienen.  
+
+Der Roboter wird mit einer von Lego Entworfenen Programmierumgebung programmiert. Diese Umgebung ist eine grafische Programmoering des Bricks. Dieses Programmierumgebung soll im laufe des Projekts benutzt und getestet werden. \\
+
 
 Kennenlernen der grafischen Programmieroberfläche\\ 
 \paragraph{Beobachtungen}
 -Beobachtungen: Hindernisse müssen einen gewisse Breite haben, Inhalt der schleife nicht zu groß sonst Probleme mit dem Ergebnis des Sensors, Unterschiedlich große Kurven auf diversen Oberflächen (Teppich, Fliesen, PVC, Parkett), Eingeschränkte Übersichtlichkeit bei komplexen Programmen,
 POSITIV: Darstellung der Sensorwerte bei Verbindung mit dem EV3. \\
+\paragraph{Auswertung}
