--- a/Studienarbeit/Dokument/content/02-ersteExperimente.tex
+++ b/Studienarbeit/Dokument/content/02-ersteExperimente.tex
@@ -12,14 +12,20 @@ Als Sensor wurde bei diesem Aufbau der Ultraschallsensor verwendet. Er dient zu 
 Der Roboter soll nach dem einprogrammierten Muster in einer ihm unbekannten Umgebung selbstständig Hindernissen ausweichen. Der Ultraschallsensor soll die Hindernisse erkennen. Dieser Versuch soll helfen, die Grenzen des Sensors kennenzulernen. Des weiteren dient dieser Versuchsaufbau dazu weitere Eigenheiten des Roboters kennenzulernen. Auch soll der Aufbau als Grundgerüst für weitere Sensoren und Versuche dienen.  
 
 Der Roboter wird mit einer von Lego Entworfenen Programmierumgebung programmiert. Diese Umgebung ist eine grafische Programmoering des Bricks. Dieses Programmierumgebung soll im laufe des Projekts benutzt und getestet werden. 
-\paragraph{Beobachtungen}
--Beobachtungen: Hindernisse müssen einen gewisse Breite haben, Inhalt der schleife nicht zu groß sonst Probleme mit dem Ergebnis des Sensors, Unterschiedlich große Kurven auf diversen Oberflächen (Teppich, Fliesen, PVC, Parkett), Eingeschränkte Übersichtlichkeit bei komplexen Programmen,
+\paragraph{Beobachtungen}Hindernisse müssen einen gewisse Breite haben, Inhalt der schleife nicht zu groß sonst Probleme mit dem Ergebnis des Sensors, Unterschiedlich große Kurven auf diversen Oberflächen (Teppich, Fliesen, PVC, Parkett), Eingeschränkte Übersichtlichkeit bei komplexen Programmen,
 POSITIV: Darstellung der Sensorwerte bei Verbindung mit dem EV3. \\
 \paragraph{Auswertung}
 Das Programm zum Ausweichen von Gegenständen ist \textbf{Hier Programmname einfügen.}Die Programmierumgebung ist zum einarbeiten und kennenlernen der Sensoren geeignet. Jedoch wird das Programm je komplexer es wird auch unübersichtlicher. Die Umgebung zeigt bei bestehender Verbindung zwischen PC und Brick die Echtzeitdaten der Motoren und Sensoren an. Dies unterstützt beim kennenlernen der Sensoren und hilft bei Problemen. So wurde festgestellt, dass der Ultraschallsensor Gegenstände\textbf{Breite unter 2-5 cm} die eine gewisse Breite nicht erfüllen nur fehlerhaft oder gar nicht erkannt werden.  
 
 \section{Test des mitgelieferten Farbsensors}
 \paragraph{Aufbau}
+- auf den Untergrund gerichteter Farbsensor(von Lego)\\
+- evtl. mit Ultraschallsensor\\
+- Programmiert mit Lego Programmierumgebung\\
+
 \paragraph{Ziel}
+- Sensor kennenlernen\\
+- Sensor einsetzen können\\
+
 \paragraph{Beobachtungen}
 \paragraph{Auswertung}
