--- a/Studienarbeit/Dokument/content/02-ersteExperimente.tex
+++ b/Studienarbeit/Dokument/content/02-ersteExperimente.tex
@@ -31,6 +31,7 @@ Das Programm zum Ausweichen von Gegenständen ist in Abbildung \vref{fig:ultrasc
 \paragraph{Ziel}
 - Sensor kennenlernen\\
 - Sensor einsetzen können\\
+- Feststellung ob der Sensor für das Projekt geeignet ist\\
 
 \paragraph{Beobachtungen}
 \paragraph{Auswertung}
