--- a/Studienarbeit/Dokument/content/01-Einleitung.tex
+++ b/Studienarbeit/Dokument/content/01-Einleitung.tex
@@ -20,7 +20,9 @@ Des weiteren soll der Roboter soll der Roboter Hindernissen ausweichen können.
 \section{Verwendetet Software}
 In diesem Projekt werden verschiedene Programmierumgebungen benutzt. Eine Programmierumgebung ist die Lego-eigene grafische Programmierumgebung. Diese Programmierumgebung gibt es in verschiedenen Ausführungen, genutzt wird die "LEGO MINDSTORMS Education EV3" Version. Diese IDE zeigt dem Nutzer unteranderem die aktuellen Werte der genutzten Sensoren an so wie deren Steckplatz am "Brick"\textbf{Glossareintrag}. Diese Programmierumgebung ist für den Einstieg und erste kleinere Programme geeignet, jedoch geht die Übersicht bei komplizierteren Programmen verloren. Aus diesem Grund wird in dieser Studienarbeit diese Umgebung dazu genutzt den Brick und die Funktionsweise der Sensoren näher kennen zu lernen. Dieses Wissen wird später dann auf die Java Programmierung transferiert.
 
-Des weiteren wird die Java IDE "Eclipse" mit der erweiterung "Lejos" genutzt. Auf die Installation der Erweiterung wird im Anhang näher eingegangen. Diese Programmierumgebung 
+Des weiteren wird die Java IDE "Eclipse" mit der erweiterung "Lejos" genutzt. Auf die Installation der Erweiterung wird im Anhang näher eingegangen. Diese Programmierumgebung \dots \\
+
+Damit bei einem etwaigen Datenverlust der Verlust gering gehalten wird, wird die Versionsverwaltung GITHUB benutzt. Darin werden die Programme und auch dieses Dokument verwaltet. Bei einem Datenverlust kann somit auf eine vorhergehende  Version des Programms oder dieses Dokuments zurückgegriffen werden. Das verwendete Repository ist öffentlich und kann unter \url{https://github.com/saschlick/Studienarbeit/} eingesehen werden.\\Ebenso werden die gesammten Projektdaten in meiner DropBox gespeichert. Dies hat mehrere Vorteile. Zum einen kann ich an von jedem Computer mit Internetzugang darauf zugreifen und zum anderen ist es ebenfalls eine Absicherung gegen Datenverlust.     
 
 
 
