Textuelle Überarbeitung und hinzufüg. der Grundlag
Grundlagen mit untergeordneten Überschriften hinzugefügt+ Stichworte bei
den Überschriften

--- a/Studienarbeit/Dokument/Skript.tex
+++ b/Studienarbeit/Dokument/Skript.tex
@@ -21,7 +21,10 @@
 \include{content/01-Einleitung}
 \newpage
 % ==============================================
-\include{content/02-ersteExperimente}
+\include{content/02-Grundlagen}
+\newpage
+% ==============================================
+\include{content/03-ersteExperimente}
 \newpage
 % ==============================================
 \include{content/0X-Anhang}
