--- a/Studienarbeit/Dokument/content/0X-Anhang.tex
+++ b/Studienarbeit/Dokument/content/0X-Anhang.tex
@@ -20,12 +20,29 @@ Trifft der Vergleich nicht zu, wird zuerst ein Ton über den integrierten Lautsp
 \begin{figure}[htb]
 \centering
 \includegraphics[width= 14cm]{Prog_LichtsensorLego_v1}
-\caption{Lego-Programm zum Test und Kennenlernen des Lichtsensors von Lego}
-\label{fig:ultraschallsensorprog}
+\caption{Lego-Programm zum Test und Kennenlernen des Farbsensors von Lego}
+\label{fig:farbsensorprog}
 \end{figure}
-Das unter \vref{fig:ultraschallsensorprog} dargestellte programm ist ein Beispielprogramm für den Lego eigenen Farbsensor. 
+Das unter Abblidung\vref{fig:farbsensorprog} dargestellte Programm, ist ein Beispielprogramm für den Lego eigenen Farbsensor. 
 Mit Hilfe dieses Programms wurde festgestellt, dass der Sensor manche Farben fehlerhaft erkennt. Dies ist zurückzuführen auf seine niedrige Farbauflösung. Diese Detektiert lediglich acht verschiedene Farben.
-\section{Installation Vision subsystem v4}
+\section{Installation Vision subsystem V4}
 Aufgrund der schlechten Farbauflösung des Lego eigenen Sensors, wurde ein weiterer Sensor angeschafft. Für diesen Sensor mussten weiter Vorarbeiten und Änderungen vorgenommen werden.
+\paragraph{Besonderheiten dieses Sensors}
+-Reaktion auf der Kamera auf fluoreszierendes Licht!!!
 
+\paragraph{Installation der Kamera-Gerätetreiber unter Windows7}
+Die Kamera wurde mittels USB-A auf Micro-USB Kabel mit dem PC verbunden.
+Die Treiber wurden von der Seite \url{http://mindsensors.com/index.php?module=pagemaster&PAGE_user_op=view_page&PAGE_id=78} geladen.\\
+Mit diesen Treibern kann anschließend das Programm NTXCamView ausgeführt werden. Dieses Programm kann unter \url{http://nxtcamview.sourceforge.net/} geladen werden.\\
+Mit Hilfe dieses Programms kann die Kamera Bilder erstellen und die Farbe für die Detektion festgelegt werden. 
+
+Besonderheit dieser Treiberinstallation ist, dass die Treiber per Hand geladen werden müssen und nicht automatisch geladen werden.
+
+\textbf{Deutsche Anleitung zum Installieren hinzufügen!!!}
+Für die Installation ist eine Internetverbindung notwendig. Es wird explizit angegeben an welchen Stellen diese benötigt wird. Für eine spätere Nutzung ist keine Internetverbindung vorgesehen.
+\begin{enumerate}
+\item Download der Geräte Treiber \textbf{Internetverbindung notwendig}
+\item Download des Programms NTXCamView \textbf{Internetverbindung notwendig}
+\item bla bla 
+\end{enumerate}
 
