--- a/Studienarbeit/Dokument/content/02-Grundlagen.tex
+++ b/Studienarbeit/Dokument/content/02-Grundlagen.tex
@@ -1,5 +1,26 @@
 \chapter{Grundlagen}
 In diesem Kapitel werden die Grundlagen von Robotern behandelt.
 \section{Bedeutung des Roboter}
-\section{Antriebsarten von Robotern}
-Zwei Haupträder werden mit Getrieb- oder Schrittmotoren unabhängig angetrieben. Ein rein passives Stützrad, ähnlich wie bei den Einkaufwagen im Supermarkt (da sind es aber zwei), unterstützt das Fahrzeug an einem dritten Punkt.
+\section{Antriebsart des Roboters}
+Zwei Haupträder werden mit Getrieb- oder Schrittmotoren unabhängig angetrieben. Ein rein passives Stützrad, ähnlich wie bei den Einkaufwagen im Supermarkt (da sind es aber zwei), stützt das Fahrzeug an einem dritten Punkt.
+
+\section{Assistenzsysteme heutiger Fahrzeuge}
+In der heutigen Zeit unterstützen die Fahrer einige Helfer, auch Assistenzsysteme genannt. Diese Systeme sollen dazu beitragen, den Straßenverkehr sicherer zumachen.
+\subsection{ABS - Antiblockiersystem}
+Ein Assistenzsystem welches sich in der Automobilbranche flächendeckend durchgesetzt hat, ist das Antiblockiersystem. Es hilft dem Fahrer, das Fahrzeug sicher zum stehen zubringen. Wie der Name schon sagt, versucht es durch gezieltes vermindern des Bremsdrucks ein blockieren des Fahrzeugs zu verhindern. Aufgrund diesen Eingriffs wird der Bremsweg verringert und der Verschleiß an den Laufflächen wird vermindert. Durch dieses System wird die Lenkbarkeit und Spurtreue erhöht.
+
+Dieses System ist inzwischen bei jedem großen Automobilhersteller in den Ausstattungslisten der Fahrzeuge. Meist ist es serienmäßig in die Fahrzeuge intgriert oder kann für einen geringen Aufpreis nachgeordert werden. 
+
+Antiblockierysteme werden nicht nur bei Autos eingesetzt. Es wird ebenfalls in Flugzeugen Zügen und Motorrädern eingesetzt. 
+
+\subsection{PDC - Park Distanz Kontrolle}
+Mit Hilfe von Ultraschallsensoren, welche meist in den Heck-/Frontschürzen untergebracht sind, wird der Abstand zu Gegenständen in einer gewissen Distanz, meist ab 1-2 Meter, gewarnt. 
+
+Diese Warnungen erfolgten bei den ersten Systemen meist akustisch über verschiedene Warntöne. Danach wurden zusätzlich kleine LED-Lampen in verschiedenen Farben eingeführt. Diese leuchten je nach Distanz zum Gegenstand oder Fahrzeug in Grün- Orange/Gelb- Rot. Die nächste Stufe ist eine optische Darstellung des Fahrzeugs auf dem Bildschirm des Infotainmentsystems. Im Bildschirm wird dann der Abstand visuell dargestellt. Zusätzlich dazu, erhält der Fahrer akustische Hinweise. Die neusten Systeme verfügen inzwischen noch über eine Kamera. Mit Hilfe der Kamera erhält der Fahrer beim einparken ein Livebild auf den Bildschirm seines Infotainmentsystems. Zusätzlich dazu wird der Abstand und der bestmögliche Fahrweg visuell im Livebild dargestellt.
+
+Dieses System und seine Weiterentwicklungen ist die Grundlage für automatische Einparksysteme. 
+\subsection{ESP - Elektronische Stabilitätscontrolle}
+
+\subsection{Automatisches einparken}
+
+\section{Spurgeführte Fahrzeuge}
