--- a/Studienarbeit/Dokument/content/02-Grundlagen.tex
+++ b/Studienarbeit/Dokument/content/02-Grundlagen.tex
@@ -12,6 +12,7 @@ Ein Assistenzsystem welches sich in der Automobilbranche flächendeckend durchge
 Dieses System ist inzwischen bei jedem großen Automobilhersteller in den Ausstattungslisten der Fahrzeuge. Meist ist es serienmäßig in die Fahrzeuge intgriert oder kann für einen geringen Aufpreis nachgeordert werden. 
 
 Antiblockierysteme werden nicht nur bei Autos eingesetzt. Es wird ebenfalls in Flugzeugen Zügen und Motorrädern eingesetzt. 
+Den ersten Einsatz eines solchen Systems fanden schon 1920 in einem Flugzeug statt.
 
 \subsection{PDC - Park Distanz Kontrolle}
 Mit Hilfe von Ultraschallsensoren, welche meist in den Heck-/Frontschürzen untergebracht sind, wird der Abstand zu Gegenständen in einer gewissen Distanz, meist ab 1-2 Meter, gewarnt. 
