--- a/Studienarbeit/Dokument/content/02-Grundlagen.tex
+++ b/Studienarbeit/Dokument/content/02-Grundlagen.tex
@@ -5,22 +5,34 @@ In diesem Kapitel werden die Grundlagen von Robotern behandelt.
 Zwei Haupträder werden mit Getrieb- oder Schrittmotoren unabhängig angetrieben. Ein rein passives Stützrad, ähnlich wie bei den Einkaufwagen im Supermarkt (da sind es aber zwei), stützt das Fahrzeug an einem dritten Punkt.
 
 \section{Assistenzsysteme heutiger Fahrzeuge}
-In der heutigen Zeit unterstützen die Fahrer einige Helfer, auch Assistenzsysteme genannt. Diese Systeme sollen dazu beitragen, den Straßenverkehr sicherer zumachen.
+In der heutigen Zeit unterstützen die Fahrer einige Helfer, auch Assistenzsysteme genannt. Diese Systeme sollen dazu beitragen, den Straßenverkehr sicherer zumachen. Sie entlasten und unterstützen den Fahrer in jeglicher Fahrsituation. So helfen sie beim einparken des Fahrzeugs oder verhindern in Gefahrensituationen den Verlust über die Kontrolle.
+
+Mit dem fortschreiten der Automobilenfortbewegung wurden immer mehr Assistenzsystem erfunden und bestehende immer weiter entwickelt. 
 \subsection{ABS - Antiblockiersystem}
 Ein Assistenzsystem welches sich in der Automobilbranche flächendeckend durchgesetzt hat, ist das Antiblockiersystem. Es hilft dem Fahrer, das Fahrzeug sicher zum stehen zubringen. Wie der Name schon sagt, versucht es durch gezieltes vermindern des Bremsdrucks ein blockieren des Fahrzeugs zu verhindern. Aufgrund diesen Eingriffs wird der Bremsweg verringert und der Verschleiß an den Laufflächen wird vermindert. Durch dieses System wird die Lenkbarkeit und Spurtreue erhöht.
 
-Dieses System ist inzwischen bei jedem großen Automobilhersteller in den Ausstattungslisten der Fahrzeuge. Meist ist es serienmäßig in die Fahrzeuge intgriert oder kann für einen geringen Aufpreis nachgeordert werden. 
+Dieses System ist inzwischen bei jedem großen Automobilhersteller in den Ausstattungslisten der Fahrzeuge. Meist ist es serienmäßig in die Fahrzeuge integriert oder kann für einen geringen Aufpreis nachgeordert werden. 
 
 Antiblockierysteme werden nicht nur bei Autos eingesetzt. Es wird ebenfalls in Flugzeugen Zügen und Motorrädern eingesetzt. 
 Den ersten Einsatz eines solchen Systems fanden schon 1920 in einem Flugzeug statt.
 
 \subsection{PDC - Park Distanz Kontrolle}
-Mit Hilfe von Ultraschallsensoren, welche meist in den Heck-/Frontschürzen untergebracht sind, wird der Abstand zu Gegenständen in einer gewissen Distanz, meist ab 1-2 Meter, gewarnt. 
+Dieses System unterstützt den Fahrer mit Hilfe akustischen und visuellen Warnhinweisen beim einparken seines Fahrzeugs. 
+\paragraph{Funktion}Mit Hilfe von Ultraschallsensoren, welche meist in den Heck-/Frontschürzen untergebracht sind, wird der Abstand zu Gegenständen in einer gewissen Distanz, meist ab 1-2 Meter, gewarnt. 
 
 Diese Warnungen erfolgten bei den ersten Systemen meist akustisch über verschiedene Warntöne. Danach wurden zusätzlich kleine LED-Lampen in verschiedenen Farben eingeführt. Diese leuchten je nach Distanz zum Gegenstand oder Fahrzeug in Grün- Orange/Gelb- Rot. Die nächste Stufe ist eine optische Darstellung des Fahrzeugs auf dem Bildschirm des Infotainmentsystems. Im Bildschirm wird dann der Abstand visuell dargestellt. Zusätzlich dazu, erhält der Fahrer akustische Hinweise. Die neusten Systeme verfügen inzwischen noch über eine Kamera. Mit Hilfe der Kamera erhält der Fahrer beim einparken ein Livebild auf den Bildschirm seines Infotainmentsystems. Zusätzlich dazu wird der Abstand und der bestmögliche Fahrweg visuell im Livebild dargestellt.
 
 Dieses System und seine Weiterentwicklungen ist die Grundlage für automatische Einparksysteme. 
-\subsection{ESP - Elektronische Stabilitätscontrolle}
+\subsection{ESC-Electronic Stability Control} 
+\paragraph{Geschichtliches} ESC-Electronic Stability Control ist noch ein Recht junges Assistenzsystem. Im Vergleich zum Antiblockiersystem, welches schon in 20er Jahren des 20.Jahrhunderts entwickelt und bis heute immer weiter entwickelt wurde, führte Mercedes-Benz, mit Hilfe der Bosch AG, dieses Assistenzsystem erst 1995 in der damals neu aufgelegten S-Klasse in die Serienproduktion ein. 
+
+Der Name Elektronisches Stabilitätsprogramm (ESP) ist Eigentum der Firma Bosch. Bei anderen Herstellern gibt es ähnliche Systeme mit anderen Bezeichnungen. Bei BMW wird das System DSC-Dynamic Stability Control genannt. Bei den Herstellern von Jaguar und Mazda ist das entsprechende System ebenfalls das DSC.
+
+Da diese unterschiedlichen Bezeichnungen zu Verwirrung führen kann wird in Fachkreisen und im Anbieter neutralen Markt meist der Begriff ESC-Electronic Stability Control oder Fahrdynamikregelung verwendet. 
+\paragraph{Funktion}Dieses Assistenzsystem hilft dem Fahrer im Grenzbereich die Kontrolle seines Fahrzeuges zu behalten. 
+
+\paragraph{Beschlüsse und Gesetze} Seit dem Beschluss des EU-Parlaments am 10.März 2009 müssen seit November 2011 alle in der EU zugelassenen Neuwagen und LKW ein entsprechendes System verwenden. Es gab eine Übergangsfrist bis Oktober 2014 für bereits zugelassene Fahrzeugtypen. Jedoch wurden Mitte 2014 immer noch einige Kleinwagen ohne ESC angeboten. 
+
 
 \subsection{Automatisches einparken}
 
