Einfügen des Parkurs
Bild für den zu befahrenden Parkurs wurde erstellt und eingefügt

--- a/Studienarbeit/Dokument/content/01-Einleitung.tex
+++ b/Studienarbeit/Dokument/content/01-Einleitung.tex
@@ -1,8 +1,15 @@
 \chapter{Einleitung}
 \section{Aufgabenstellung}
+
 Aufgabe dieser Studienarbeit ist es, mit Hilfe von Lego Mindstorms, einen Roboter aufzubauen. Dieser Roboter soll sich in einer ihm unbekannten Umgebung fortbewegen. Durch farbliche Objekte und Markierungen innerhalb dieser Umgebung soll er sich entsprechend derer Bedeutung verhalten. 
 
 Des weiteren soll der Roboter soll der Roboter Hindernissen ausweichen können. 
+\begin{figure}[htb]
+\centering
+\includegraphics[width= 15cm]{parkur}
+\caption{Übersicht des zu befahrenden Parkurs}
+\label{fig:Fahrstrecke}
+\end{figure}
 
 \section{Projektplanung}
 \begin{table}[htp]
