Einfügen der Legende
Bilder sagen mehr als 1000 Worte

--- a/Studienarbeit/Dokument/content/01-Einleitung.tex
+++ b/Studienarbeit/Dokument/content/01-Einleitung.tex
@@ -12,8 +12,13 @@ Des weiteren soll der Roboter soll der Roboter Hindernissen, wie Wänden, auswei
 \end{figure}
 
 Die Erkennung der farblichen Marikierungen soll mit Hilfe des mitgelieferten Farbsensors erfolgen. Die Wanderkennung soll mit Hilfe des Ultraschallsensors realisiert werden. 
-Ein entsprechender Parkur, mit Markierungen und Hindernissen, ist der Abbildung \vref{fig:Fahrstrecke} zu entnehmen. In der Abbildung \textbf{Legende} ist die Entsprechende Bedeutung der Symbole und Flächen näher erleutert.
-
+Ein entsprechender Parkur, mit Markierungen und Hindernissen, ist der Abbildung \vref{fig:Fahrstrecke} zu entnehmen. In der Abbildung \vref{fig:legende} ist die entsprechende Legende, in der Symbole und Flächen näher erleutert.
+\begin{figure}[htp]
+\centering
+\includegraphics[width= 10cm]{legendeparkur.png}
+\caption{Legende zu Bild \vref{fig:Fahrstrecke}}
+\label{fig:legende}
+\end{figure}
 
 \section{Projektplanung}
 \begin{table}[htp]
